# LineCoach

./: .env-example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  README.md  USAGE_GUIDE.md  advanced_gemini_coach.py  cloudbuild.dev.yaml  gemini_live_coach.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_api_server.py  test_api.py
app/: __init__.py
app/api/: main.py
app/api/endpoints/: linecoach.py  linecoach_gcp.py
app/api/routes/: openai.py
app/core/: config.py
app/model/: __init__.py  coach.py  schemas.py
app/utils/: __init__.py  error_handling.py  logging.py
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  main.py
backend/app/api/routes/: coach.py
backend/app/core/: __init__.py  app.py  config.py
backend/app/model/: __init__.py  coach.py  schemas.py
backend/app/utils/: __init__.py  error_handling.py  logging.py
deployment_values/: env.dev.yaml
examples/: README.md  audio_file_client.py  real_time_audio_client.py  websocket_audio_client.py  websocket_gcp_client.py
scripts/: README.md  fix_cloud_run_auth.sh
tests/: check_gemini_auth.py  test_linecoach_api.py  test_linecoach_api_README.md  test_streaming.py
